# NEXUS-U

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  NEXUS-U_v2.6_SHA256SUMS.txt  PUBLISH_WINDOWS.ps1  README.md  RECOVERY_PROVENANCE.md  SECURITY.md  VALIDATION.md  docker-compose.yml  pyproject.toml
.nexus-u/: control.db
benchmark-results/: active-lower-bound-search.json  active-lower-bound-search.signed.json  cross-kernel-lower-bound.json  cross-kernel-lower-bound.signed.json  discovery-trials.json  discovery-trials.signed.json  federation-benchmark.json  federation-benchmark.signed.json  formalized-lower-bound-search.json  formalized-lower-bound-search.signed.json  independent-discovery-challenge.json  independent-discovery-challenge.signed.json  kernel-receipt-federation.json  kernel-receipt-federation.signed.json  kernel-receipt-request.json  kernel-verification-bridge.json  kernel-verification-bridge.signed.json  lower-bound-lab.json  lower-bound-lab.signed.json  nexus-kernel-benchmark.json  nexus-kernel-benchmark.signed.json  nexus-kernel-proof.json  reality-benchmark.json  reality-benchmark.signed.json  routing-benchmark.json  routing-benchmark.signed.json  tension-benchmark.json  tension-benchmark.signed.json
docs/: ACTIVE_LOWER_BOUND_SEARCH.md  COMPOSITE_PLATFORM.md  CROSS_KERNEL_RESTRICTED_THEOREM.md  DISCOVERY_TRIALS.md  FEDERATED_EVIDENCE.md  FORMALIZED_LOWER_BOUND_SEARCH.md  INDEPENDENT_DISCOVERY_CHALLENGE.md  INTEGRATIONS.md  KERNEL_VERIFICATION_BRIDGE.md  KERNEL_WITNESS_FEDERATION.md  LOWER_BOUND_DISCOVERY_LAB.md  NEXUS_KERNEL.md  OBLIGATION_CENTERED_COMPUTING.md  OBLIGATION_GRAPH.md  OBLIGATION_ROUTER.md  PRODUCTION.md  (+3 more)
(+209 files in other folders)
